<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/inputName"
                    android:layout_width="332dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enterName" />
            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <CheckBox android:id="@+id/checkbox_p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precaution1"
                    />
                <CheckBox android:id="@+id/checkbox_p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precaution2"
                    />
                <CheckBox android:id="@+id/checkbox_p3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precaution3"
                    />
                <CheckBox android:id="@+id/checkbox_p4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precaution4"
                    />
                <CheckBox android:id="@+id/checkbox_p5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precaution5"
                    />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/button_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submitButton"
                    android:onClick="submitAction"
                    android:enabled="false"/>
                <Button xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/button_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clearButton"
                    android:onClick="clearAction" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/resultDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/userState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>


